[gd_scene load_steps=50 format=2]

[ext_resource path="res://src/test/wall_walking/wall_walker.gd" type="Script" id=1]
[ext_resource path="res://assets/shader/palette.gdshader" type="Shader" id=2]
[ext_resource path="res://src/shooter/health.gd" type="Script" id=3]
[ext_resource path="res://src/test/gameplay_test/input_state.gd" type="Script" id=4]
[ext_resource path="res://src/shooter/machete_hitbox.gd" type="Script" id=5]
[ext_resource path="res://src/util/state_machine/state_machine.gd" type="Script" id=6]
[ext_resource path="res://src/util/color/palette_client.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/fighter/hitbox/hitbox_frame.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/texture/fighter/cucaracha.png" type="Texture" id=9]
[ext_resource path="res://src/shooter/hurtbox.gd" type="Script" id=10]
[ext_resource path="res://src/shooter/gun_pivot.gd" type="Script" id=11]
[ext_resource path="res://assets/texture/fighter/mook.png" type="Texture" id=12]
[ext_resource path="res://assets/audio/sfx/enemy_hit3.wav" type="AudioStream" id=13]
[ext_resource path="res://src/shooter/gun_hold.gd" type="Script" id=14]
[ext_resource path="res://src/shooter/death_free_anim.gd" type="Script" id=15]
[ext_resource path="res://assets/audio/sfx/hit_the_ground.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/audio/sfx/blindado2.wav" type="AudioStream" id=17]
[ext_resource path="res://src/test/wall_walking/roach/idle.gd" type="Script" id=18]
[ext_resource path="res://src/test/wall_walking/roach/run.gd" type="Script" id=19]
[ext_resource path="res://src/test/wall_walking/roach/air.gd" type="Script" id=20]
[ext_resource path="res://src/test/wall_walking/roach/dead.gd" type="Script" id=21]
[ext_resource path="res://src/test/wall_walking/roach/dead_ground.gd" type="Script" id=22]
[ext_resource path="res://src/test/wall_walking/roach/fly.gd" type="Script" id=23]
[ext_resource path="res://src/shooter/dung_shooter.tscn" type="PackedScene" id=24]
[ext_resource path="res://src/test/wall_walking/roach/aim_to_dir.gd" type="Script" id=25]
[ext_resource path="res://src/test/wall_walking/shake.gd" type="Script" id=26]
[ext_resource path="res://src/test/wall_walking/roach/shoot.gd" type="Script" id=27]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 22 )

[sub_resource type="Image" id=479]
data = {
"data": PoolByteArray( 240, 188, 60, 255, 71, 58, 0, 255, 41, 28, 0, 255, 0, 0, 0, 255 ),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 4
}

[sub_resource type="ImageTexture" id=477]
flags = 0
flags = 0
image = SubResource( 479 )
size = Vector2( 4, 1 )

[sub_resource type="ShaderMaterial" id=478]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/palette_size = 4
shader_param/offset = 0
shader_param/blue_index_offset = 0.0
shader_param/palette = SubResource( 477 )

[sub_resource type="RectangleShape2D" id=428]
extents = Vector2( 7, 14.5 )

[sub_resource type="RectangleShape2D" id=429]
extents = Vector2( 11, 16.5 )

[sub_resource type="Animation" id=430]
resource_local_to_scene = true
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/hitbox_manager/hurtbox:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/gun_pivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=431]
resource_local_to_scene = true
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3.0 ]
}

[sub_resource type="Animation" id=432]
resource_local_to_scene = true
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/hitbox_manager/hurtbox:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("pivot/Sprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = false
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6.0 ]
}

[sub_resource type="Animation" id=433]
resource_local_to_scene = true
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6.0 ]
}

[sub_resource type="Animation" id=434]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("pivot/gun_pivot:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}

[sub_resource type="Animation" id=435]
resource_local_to_scene = true
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=436]
resource_local_to_scene = true
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4.0, 5.0 ]
}

[sub_resource type="Animation" id=437]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2.0, 3.0 ]
}

[sub_resource type="Animation" id=438]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=439]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=440]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite/palette_client_hurt:trigger")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite/palette_client:trigger")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=441]
resource_name = "hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite/palette_client_hurt:trigger")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite/palette_client:trigger")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, false ]
}

[sub_resource type="Animation" id=442]
resource_name = "invulnerable"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite/palette_client_invulnerable:trigger")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=443]
resource_name = "invulnerable_ending"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite/palette_client_invulnerable:trigger")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite/palette_client:trigger")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=444]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=445]
resource_name = "play"
tracks/0/type = "value"
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false ]
}

[node name="wall_walker" type="KinematicBody2D"]
collision_mask = 34
script = ExtResource( 1 )
walk_speed = 200.0
jump_speed = 200.0
team = 1
gravity = Vector2( 0, 200 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="pivot" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="pivot"]
unique_name_in_owner = true
visible = false
material = SubResource( 478 )
texture = ExtResource( 9 )
hframes = 3
vframes = 3
__meta__ = {
"_editor_description_": "YXNlcHJpdGVfd2l6YXJkX2NvbmZpZwpwbGF5ZXJ8PXN0YXRlX2FuaW1hdGlvbgpzb3VyY2V8PXJlczovL2Fzc2V0cy9hc2Vwcml0ZS9jdWNhcmFjaGEuYXNlcHJpdGUKbGF5ZXJ8PQpvcF9leHB8PUZhbHNlCm9fZm9sZGVyfD1yZXM6Ly9hc3NldHMvdGV4dHVyZS9maWdodGVyCm9fbmFtZXw9Cm9ubHlfdmlzaWJsZXw9VHJ1ZQpvX2V4X3B8PQo="
}

[node name="palette_client_hurt" parent="pivot/Sprite" instance=ExtResource( 7 )]
type = 1
index = 4

[node name="palette_client_invulnerable" parent="pivot/Sprite" instance=ExtResource( 7 )]
type = 1
index = 5

[node name="palette_client" parent="pivot/Sprite" instance=ExtResource( 7 )]
index = 5

[node name="hitbox_manager" type="Node2D" parent="pivot"]

[node name="hurtbox" parent="pivot/hitbox_manager" instance=ExtResource( 8 )]
visible = false
monitorable = true
enabled = true

[node name="hurtbox" type="Area2D" parent="pivot/hitbox_manager/hurtbox"]
collision_layer = 4
collision_mask = 0
monitoring = false
monitorable = false
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/hitbox_manager/hurtbox/hurtbox"]
position = Vector2( 0, 5.5 )
shape = SubResource( 428 )

[node name="hitbox" type="Node2D" parent="pivot/hitbox_manager"]
script = ExtResource( 5 )
knockback = Vector2( 200, -150 )
team_owner_level = 0

[node name="area" type="Area2D" parent="pivot/hitbox_manager/hitbox"]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/hitbox_manager/hitbox/area"]
position = Vector2( 0, 5.5 )
shape = SubResource( 429 )

[node name="gun_pivot" type="Node2D" parent="pivot"]
script = ExtResource( 11 )

[node name="gun_hold" type="Node2D" parent="pivot/gun_pivot"]
script = ExtResource( 14 )

[node name="state_animation" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/RESET = SubResource( 430 )
anims/air = SubResource( 431 )
anims/dead = SubResource( 432 )
anims/dead_air = SubResource( 433 )
anims/floor_aim = SubResource( 434 )
anims/idle = SubResource( 435 )
anims/run = SubResource( 436 )
anims/side_flying = SubResource( 437 )
anims/side_shoot = SubResource( 438 )
anims/start_flight = SubResource( 439 )

[node name="palette_animation" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/RESET = SubResource( 440 )
anims/hurt = SubResource( 441 )
anims/invulnerable = SubResource( 442 )
anims/invulnerable_ending = SubResource( 443 )

[node name="input_state" type="Node" parent="."]
process_priority = 2
script = ExtResource( 4 )

[node name="health" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 3 )
max_value = 16.0
value = 16.0

[node name="death_free_anim" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 15 )

[node name="death_anim" type="AnimationPlayer" parent="death_free_anim"]
anims/RESET = SubResource( 444 )
anims/play = SubResource( 445 )

[node name="got_hit_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
bus = "sfx"

[node name="hit_the_ground_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
bus = "sfx"

[node name="blindado" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
bus = "sfx"

[node name="aim_to_dir" type="Node2D" parent="."]
script = ExtResource( 25 )

[node name="dung_shooter" parent="aim_to_dir" instance=ExtResource( 24 )]

[node name="state_machine" type="Node" parent="."]
script = ExtResource( 6 )
start_state = "idle"

[node name="idle" type="Node" parent="state_machine"]
script = ExtResource( 18 )
animation = "idle"

[node name="shoot" type="Node" parent="state_machine"]
script = ExtResource( 27 )
animation = "idle"

[node name="duration" type="Timer" parent="state_machine/shoot"]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="shoot_lag" type="Timer" parent="state_machine/shoot"]
process_mode = 0
one_shot = true

[node name="run" type="Node" parent="state_machine"]
script = ExtResource( 19 )
animation = "run"

[node name="fly" type="Node" parent="state_machine"]
script = ExtResource( 23 )
animation = "side_flying"
flight_speed = 300.0

[node name="air" type="Node" parent="state_machine"]
script = ExtResource( 20 )
animation = "air"

[node name="dead_air" type="Node" parent="state_machine"]
script = ExtResource( 21 )
animation = "dead"

[node name="dead" type="Node" parent="state_machine"]
script = ExtResource( 22 )
animation = "dead"

[node name="shake" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 26 )

[connection signal="die" from="." to="pivot/hitbox_manager/hitbox" method="disable"]
[connection signal="healed" from="." to="health" method="add"]
[connection signal="took_damage" from="." to="health" method="subtract"]
[connection signal="took_hit" from="." to="got_hit_sound" method="play"]
[connection signal="area_entered" from="pivot/hitbox_manager/hitbox/area" to="pivot/hitbox_manager/hitbox" method="_on_hitbox_area_entered"]
[connection signal="empty" from="health" to="." method="die"]
